--- a/examples/uiuc.ipynb
+++ b/examples/uiuc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
    ],
    "source": [
     "from acdesign.airfoils.polar import UIUCPolars\n",
-    "from plotly_templates.aiaa import aiaa_template\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -71,172 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>alpha</th>\n",
-       "      <th>Cl</th>\n",
-       "      <th>Cm</th>\n",
-       "      <th>re</th>\n",
-       "      <th>pre_stall</th>\n",
-       "      <th>group</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-5.95</td>\n",
-       "      <td>-0.593</td>\n",
-       "      <td>-0.0038</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-4.71</td>\n",
-       "      <td>-0.476</td>\n",
-       "      <td>-0.0028</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-3.44</td>\n",
-       "      <td>-0.353</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-2.53</td>\n",
-       "      <td>-0.265</td>\n",
-       "      <td>0.0021</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-1.59</td>\n",
-       "      <td>-0.185</td>\n",
-       "      <td>0.0048</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>9.83</td>\n",
-       "      <td>0.989</td>\n",
-       "      <td>0.0067</td>\n",
-       "      <td>2000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>10.92</td>\n",
-       "      <td>1.088</td>\n",
-       "      <td>0.0094</td>\n",
-       "      <td>2000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>12.01</td>\n",
-       "      <td>1.179</td>\n",
-       "      <td>0.0123</td>\n",
-       "      <td>2000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>13.03</td>\n",
-       "      <td>1.249</td>\n",
-       "      <td>0.0154</td>\n",
-       "      <td>2000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>13.99</td>\n",
-       "      <td>1.297</td>\n",
-       "      <td>0.0185</td>\n",
-       "      <td>2000000.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>123 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    alpha     Cl      Cm         re  pre_stall  group\n",
-       "0   -5.95 -0.593 -0.0038        0.0        1.0      0\n",
-       "1   -4.71 -0.476 -0.0028        0.0        1.0      0\n",
-       "2   -3.44 -0.353  0.0000        0.0        1.0      0\n",
-       "3   -2.53 -0.265  0.0021        0.0        1.0      0\n",
-       "4   -1.59 -0.185  0.0048        0.0        1.0      0\n",
-       "..    ...    ...     ...        ...        ...    ...\n",
-       "15   9.83  0.989  0.0067  2000000.0        1.0      4\n",
-       "16  10.92  1.088  0.0094  2000000.0        1.0      4\n",
-       "17  12.01  1.179  0.0123  2000000.0        1.0      4\n",
-       "18  13.03  1.249  0.0154  2000000.0        1.0      4\n",
-       "19  13.99  1.297  0.0185  2000000.0        1.0      4\n",
-       "\n",
-       "[123 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5617,11 +5452,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a461f03b0145a9e36add5ebe2056001937525fb81057e163abe07e8fec8f063f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('acdes')",
+   "display_name": "acdesign",
    "language": "python",
    "name": "python3"
   },
@@ -5635,7 +5467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.14.0"
   },
   "orig_nbformat": 4
  },
